--- a/TripGuide/Scenes/Favourites/Seaside/ToursFiles/Details/ToursTableView/ToursDetTableViewCell.xib
+++ b/TripGuide/Scenes/Favourites/Seaside/ToursFiles/Details/ToursTableView/ToursDetTableViewCell.xib
@@ -24,7 +24,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="290" height="371"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tour Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFk-pO-lj2">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Tour Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFk-pO-lj2">
                         <rect key="frame" x="10" y="9.9999999999999982" width="270" height="25.333333333333329"/>
                         <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="25"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
