--- a/TripGuide/Scenes/Favourites/Seaside/SeeAllFiles/amusementFiles/Details/ParksCollectionView.xib
+++ b/TripGuide/Scenes/Favourites/Seaside/SeeAllFiles/amusementFiles/Details/ParksCollectionView.xib
@@ -15,31 +15,40 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="parks" id="gTV-IL-0wX" customClass="ParksCollectionView" customModule="TripGuide" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="337" height="373"/>
+            <rect key="frame" x="0.0" y="0.0" width="329" height="365"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="337" height="373"/>
+                <rect key="frame" x="0.0" y="0.0" width="329" height="365"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sgC-5d-meQ">
-                        <rect key="frame" x="0.0" y="0.0" width="337" height="165"/>
+                        <rect key="frame" x="0.0" y="0.0" width="329" height="165"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="337" id="EUO-bi-5Xv"/>
+                            <constraint firstAttribute="width" constant="329" id="Rn9-X2-W28"/>
                             <constraint firstAttribute="height" constant="165" id="cGT-4A-uQi"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="go4-g4-CRj">
-                        <rect key="frame" x="12" y="181" width="295" height="30"/>
+                        <rect key="frame" x="12" y="181" width="287" height="30"/>
                         <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="25"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIz-uk-VK1">
-                        <rect key="frame" x="0.0" y="223" width="327" height="145"/>
-                        <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="16"/>
+                        <rect key="frame" x="0.0" y="223" width="319" height="137"/>
+                        <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="20"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rGh-96-yMy">
+                        <rect key="frame" x="268.33333333333331" y="10" width="50.666666666666686" height="34.333333333333336"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" image="heart.fill" catalog="system"/>
+                        <connections>
+                            <action selector="didTapButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="Sug-1h-Vsd"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -48,20 +57,26 @@
                 <constraint firstItem="nIz-uk-VK1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CrQ-2b-KXs"/>
                 <constraint firstAttribute="trailing" secondItem="nIz-uk-VK1" secondAttribute="trailing" constant="10" id="DZf-7j-lIq"/>
                 <constraint firstAttribute="trailing" secondItem="go4-g4-CRj" secondAttribute="trailing" constant="30" id="JFV-ng-XrE"/>
+                <constraint firstItem="rGh-96-yMy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Jpf-ZX-Bjh"/>
                 <constraint firstItem="nIz-uk-VK1" firstAttribute="top" secondItem="go4-g4-CRj" secondAttribute="bottom" constant="12" id="NUM-Bt-tLs"/>
+                <constraint firstAttribute="trailing" secondItem="rGh-96-yMy" secondAttribute="trailing" constant="10" id="UJQ-xG-KOD"/>
                 <constraint firstItem="sgC-5d-meQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="UKV-BS-MMR"/>
                 <constraint firstAttribute="trailing" secondItem="sgC-5d-meQ" secondAttribute="trailing" id="XCf-4I-2lB"/>
                 <constraint firstItem="sgC-5d-meQ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ekN-yu-cll"/>
                 <constraint firstItem="go4-g4-CRj" firstAttribute="top" secondItem="sgC-5d-meQ" secondAttribute="bottom" constant="16" id="mvA-95-iEx"/>
                 <constraint firstItem="go4-g4-CRj" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="rg6-VY-8Iy"/>
             </constraints>
-            <size key="customSize" width="337" height="373"/>
+            <size key="customSize" width="329" height="365"/>
             <connections>
                 <outlet property="amusementImage" destination="sgC-5d-meQ" id="am9-Cv-Z0O"/>
                 <outlet property="amusmentName" destination="go4-g4-CRj" id="YvV-YJ-Mne"/>
                 <outlet property="amusmentText" destination="nIz-uk-VK1" id="8ZF-h6-1XU"/>
+                <outlet property="heartbutton" destination="rGh-96-yMy" id="qEG-Wj-1Ft"/>
             </connections>
-            <point key="canvasLocation" x="254.19847328244273" y="94.014084507042256"/>
+            <point key="canvasLocation" x="248.09160305343511" y="91.197183098591552"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
+    </resources>
 </document>
