--- a/TripGuide/Scenes/Explore/ExploretableViewCell/ExploreTableViewCell.xib
+++ b/TripGuide/Scenes/Explore/ExploretableViewCell/ExploreTableViewCell.xib
@@ -9,22 +9,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="211" id="KGk-i7-Jjw" customClass="ExploreTableViewCell" customModule="TouristGuide" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="334" height="211"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="207" id="KGk-i7-Jjw" customClass="ExploreTableViewCell" customModule="TripGuide" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="214" height="207"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="334" height="211"/>
+                <rect key="frame" x="0.0" y="0.0" width="214" height="207"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zdv-ie-dd3">
-                        <rect key="frame" x="0.0" y="3" width="334" height="205"/>
+                        <rect key="frame" x="0.0" y="3" width="214" height="201"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="334" id="NK8-wh-DEK"/>
-                            <constraint firstAttribute="height" constant="205" id="rYt-jl-igR"/>
+                            <constraint firstAttribute="width" constant="214" id="8MW-uF-3gI"/>
+                            <constraint firstAttribute="height" constant="201" id="uVG-ap-Omn"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cda-l9-jV1">
-                        <rect key="frame" x="134" y="11.333333333333329" width="66" height="188.33333333333337"/>
+                        <rect key="frame" x="74" y="11.333333333333329" width="66" height="184.33333333333337"/>
                         <fontDescription key="fontDescription" name="Impact" family="Impact" pointSize="30"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                 <outlet property="cityImage" destination="zdv-ie-dd3" id="Zs4-yU-FAX"/>
                 <outlet property="cityName" destination="Cda-l9-jV1" id="Icz-Ue-OnS"/>
             </connections>
-            <point key="canvasLocation" x="111.45038167938931" y="78.521126760563391"/>
+            <point key="canvasLocation" x="19.847328244274809" y="77.112676056338032"/>
         </tableViewCell>
     </objects>
 </document>
