changed some features
changed some features and works well

--- a/TripGuide/Scenes/Favourites/Seaside/ToursFiles/Details/DetailsOfTour/TourDetailsTapped.storyboard
+++ b/TripGuide/Scenes/Favourites/Seaside/ToursFiles/Details/DetailsOfTour/TourDetailsTapped.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -204,6 +205,7 @@
                         <outlet property="phNumber" destination="fUm-Er-7p2" id="426-Uv-HvT"/>
                         <outlet property="priceLbl" destination="Cdy-gp-dO7" id="YT9-fU-9yQ"/>
                         <outlet property="rateLbl" destination="Cik-Cm-KlT" id="OIP-SX-TLk"/>
+                        <outlet property="tourContentView" destination="zRE-bL-73C" id="usL-fV-6Yl"/>
                         <outlet property="tourDetails" destination="c68-Ek-l5p" id="ye2-ah-PTv"/>
                         <outlet property="tourImage" destination="sEH-VR-YD1" id="7Ha-Gh-AhH"/>
                         <outlet property="wineLbl" destination="hmn-V8-ya1" id="Ufg-lo-4gX"/>
